Test buildpack on Travis
Since previously the Travis script step was a no-op. This will give us
confidence that the upcoming Redis version support PR has not broken
anything.

Fixes W-6165951.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,9 @@
-sudo: false
-script: exit 0
+language: bash
+services:
+  - docker
+env:
+  - STACK=cedar-14
+  - STACK=heroku-16
+  - STACK=heroku-18
+script:
+  - ./bin/test.sh "${STACK}"
