--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,16 @@ services:
 env:
   - STACK=cedar-14 REDIS_VERSION=3
   - STACK=cedar-14 REDIS_VERSION=4
+  - STACK=cedar-14 REDIS_VERSION=5
   - STACK=heroku-16 REDIS_VERSION=3
   - STACK=heroku-16 REDIS_VERSION=4
   - STACK=heroku-16 REDIS_VERSION=5
-  # The default version (currently 3)
-  - STACK=heroku-18
+  - STACK=heroku-18 REDIS_VERSION=3
   - STACK=heroku-18 REDIS_VERSION=4
+  - STACK=heroku-18 REDIS_VERSION=5
+  # The default version.
+  - STACK=heroku-18
+  # An exact point release version.
   - STACK=heroku-18 REDIS_VERSION=5.0.5
 script:
   - ./bin/test.sh "${STACK}"
