Add Heroku-20 to the Travis test matrix
To confirm that the buildpack works on the preview of the new stack.

Fixes W-7501590.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ env:
   - STACK=heroku-18 REDIS_VERSION=3
   - STACK=heroku-18 REDIS_VERSION=4
   - STACK=heroku-18 REDIS_VERSION=5
+  - STACK=heroku-20 REDIS_VERSION=3
+  - STACK=heroku-20 REDIS_VERSION=4
+  - STACK=heroku-20 REDIS_VERSION=5
   # The default version.
   - STACK=heroku-18
   # An exact point release version.
