--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ workflows:
       - test:
           matrix:
             parameters:
-              stack: [heroku-16, heroku-18, heroku-20]
+              stack: [heroku-18, heroku-20]
               redis_version: ["3", "4", "5", "6"]
       # The default version.
       - test:
