--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,4 @@
 version: 2.1
-orbs:
-  docker: circleci/docker@1.5.0
 jobs:
   test:
     parameters:
@@ -9,13 +7,13 @@ jobs:
       redis_version:
         type: string
     docker:
-      - image: cimg/base:2020.01
+      - image: cimg/base:stable
     environment:
       STACK: << parameters.stack >>
       REDIS_VERSION: << parameters.redis_version >>
     steps:
       - setup_remote_docker:
-          docker_layer_caching: true
+          version: 20.10.11
       - checkout
       - run:
           name: "Running test"
@@ -27,7 +25,7 @@ workflows:
       - test:
           matrix:
             parameters:
-              stack: [heroku-18, heroku-20]
+              stack: [heroku-18, heroku-20, heroku-22]
               redis_version: ["3", "4", "5", "6"]
       # The default version.
       - test:
