--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -7,16 +7,18 @@ jobs:
     strategy:
       matrix:
         stack: [heroku-20, heroku-22, heroku-24]
-        redis_version: ["", "4", "5", "6", "6.2", "7", "7.0", "7.0.11"]
+        tls: ["", "true"]
+        redis_version: ["", "6.2", "7", "7.0", "7.0.11"]
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-    - name: Run Test
-      run: ./bin/test.sh ${{ matrix.stack }}
-      env:
-        REDIS_VERSION: ${{ matrix.redis_version }}
+      - name: Run Test
+        run: ./bin/test.sh ${{ matrix.stack }}
+        env:
+          REDIS_VERSION: ${{ matrix.redis_version }}
+          REDIS_CI_TLS: ${{ matrix.tls }}
 
   # dummy job to wait and block merge until all jobs have completed
   done:
