--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         stack: [heroku-20, heroku-22, heroku-24]
-        redis_version: ["", "4", "5", "6", "6.2", "7", "7.0", "7.0.11"]
+        redis_version: ["", "4", "5", "6", "6.2", "7", "7.0", "7.0.11", "7.2.5"]
     runs-on: ubuntu-latest
 
     steps:
