--- a/.github/workflows/push_dependabot_metadata.yml
+++ b/.github/workflows/push_dependabot_metadata.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   send-alerts:
-    runs-on: sfdc-hk-ubuntu-latest
+    runs-on: pub-hk-ubuntu-22.04-small
     steps:
       - name: Send data to Security Alerts
         uses: heroku/security-alerts-action@main
